tests/sema/fail/v29_fail_extern_struct_return.ep
# COMPILE_FAIL_CONTAINS: extern MakeValue has unsupported ABI return type WinValue

type WinValue {
    bits: u64
}

extern "demo.dll" fun MakeValue(): WinValue

fun main(): void {}
